数据库调整到服务器

--- a/templates/search_section.html
+++ b/templates/search_section.html
@@ -23,10 +23,14 @@
 					<p class="mzub-f1 fz24 c-504d3e">科室一</p>
 					<i class="iconfont icon-next fz24 c-504d3e"></i>
 				</li>
-                <li class="bb ptb10 mzub mzub-ac">
+
+			</ul>
+            <ul class="department-list plr30">
+				<li class="bb ptb10 mzub mzub-ac">
 					<p class="mzub-f1 fz24 c-504d3e">科室一</p>
 					<i class="iconfont icon-next fz24 c-504d3e"></i>
 				</li>
+
 			</ul>
 			<p class="tx-c c-504d3e fz24">暂无数据~~~</p>
 		</div>
