--- a/templates/section_detail.html
+++ b/templates/section_detail.html
@@ -1,3 +1,5 @@
+{% load staticfiles %}
+
 <!DOCTYPE html>
 <html>
 
@@ -8,7 +10,7 @@
 		<meta http-equiv="x-rim-auto-match" content="none">
 		<meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0" />
 		<link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_856748_lgsst0sg15e.css" />
-		<link rel="stylesheet" type="text/css" href="css/main.css" />
+		<link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}" />
 
 		<script src="js/jquery-3.3.1.min.js"></script>
 		<title></title>
