--- a/templates/section_list.html
+++ b/templates/section_list.html
@@ -22,16 +22,15 @@
 				<span class="c-606266 fz14">请输入科室或医生姓名查询</span>
 			</a>
 			<ul class="department-list">
+                {% for section in sections %}
 				<li class="bb ptb10 mzub mzub-ac">
-					<p class="mzub-f1 fz24 c-504d3e">科室一</p>
+                    <a href="{% url 'doctor_list' section.id %}"><p class="mzub-f1 fz24 c-504d3e">{{ section.name }}</p></a>
+
 					<i class="iconfont icon-next fz24 c-504d3e"></i>
 				</li>
-                <li class="bb ptb10 mzub mzub-ac">
-					<p class="mzub-f1 fz24 c-504d3e">科室一</p>
-					<i class="iconfont icon-next fz24 c-504d3e"></i>
-				</li>
+                {% endfor %}
 			</ul>
-			<p class="tx-c c-504d3e fz24">暂无数据~~~</p>
+{#			<p class="tx-c c-504d3e fz24">暂无数据~~~</p>#}
 		</div>
 	</body>
 
