--- a/templates/section_detail.html
+++ b/templates/section_detail.html
@@ -20,7 +20,7 @@
 <body>
 <div class="warp bg-fff6cf">
     <div class="data-title mzub mzub-ac ptb10 bb plr30">
-        <p class="fz24 c33 mzub-f1">2018-10-24</p>
+        <p class="fz24 c33 mzub-f1">{{ str_date }}</p>
         <div class="mzub mzub-pac fz20 scheduling-box">
             <p class="scheduling-tab active mzub-f1 plr10 tx-c plr10 ptb10">日期排班</p>
             <p class="scheduling-tab mzub-f1 all-doc plr10 tx-c plr10 ptb10">全部医生</p>
@@ -40,21 +40,23 @@
         </div>
         <div class="doc-list">
             <ul>
+                {% for sch in schedules %}
                 <li onclick="goDoc()" class="mzub mzub-ac ptb10 bb plr30">
                     <div class="doc-img mr20">
-                        <img src="" alt=""/>
+                        <img src="{{ MEDIA_URL }}{{ sch.doctor.image }}"  alt=""/>
                     </div>
                     <div class="mzub-f1 fz22">
-                        <p class="mb10 c66">张玉</p>
+                        <p class="mb10 c66">{{ sch.doctor.name }}</p>
                         <p class="c-999893">医生</p>
                     </div>
-                    <div class="residue-num mzub mzub-pac cff fz18 mr10">剩10</div>
+                    <div class="residue-num mzub mzub-pac cff fz18 mr10">剩{{ sch.leave_num }}</div>
                     <i class="iconfont icon-next fz24 c33"></i>
                 </li>
+                {% endfor %}
             </ul>
         </div>
     </div>
-    <p class="tx-c c-504d3e fz24">暂无数据~~~</p>
+{#    <p class="tx-c c-504d3e fz24">暂无数据~~~</p>#}
 </div>
 </body>
 <script type="text/javascript">
