--- a/templates/section_detail.html
+++ b/templates/section_detail.html
@@ -1,4 +1,3 @@
-{% load staticfiles %}
 
 <!DOCTYPE html>
 <html>
@@ -11,9 +10,10 @@
     <meta name="viewport"
           content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
     <link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_856748_lgsst0sg15e.css"/>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="/static/css/main.css"/>
 
-    <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
+{#    <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>#}
+    <script src="/static/js/jquery-3.3.1.min.js"></script>
     <title></title>
 </head>
 
