数据库调整到服务器

--- a/templates/section_detail.html
+++ b/templates/section_detail.html
@@ -64,7 +64,7 @@
                         })
                         function goDoc() {
                             console.log(123)
-                            window.location.href = '{% url 'register_detail' sch.id %}'
+                            window.location.href = "{{ reverse('register_detail', kwargs={'schedule_id': sch.id}) }}"
                         }
                         ;
                     </script>
