数据库调整到服务器

--- a/templates/doctor.html
+++ b/templates/doctor.html
@@ -97,7 +97,7 @@
     })
     function goInfo() {
         console.log(123)
-        window.location.href = '确认挂号信息.html'
+        window.location.href = "{{ auth_url(reverse('register_identify')) }}"
     }
     ;
 </script>
