--- a/templates/identify.html
+++ b/templates/identify.html
@@ -8,7 +8,7 @@
 		<meta http-equiv="x-rim-auto-match" content="none">
 		<meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0" />
 		<link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_856748_lgsst0sg15e.css" />
-		<link rel="stylesheet" type="text/css" href="css/main.css" />
+		<link rel="stylesheet" type="text/css" href="/static/css/main.css"/>
 		<title></title>
 	</head>
 
