--- a/templates/identify.html
+++ b/templates/identify.html
@@ -18,32 +18,36 @@
 				<ul>
 					<li class="mzub mzub-ac bb plr30 ptb20 bg-fff6cf">
 						<p class="c66 mzub-f1 fz22 mr30">医院名称</p>
-						<p class="fz24 c-834c45 mzub-te mzub-f1 tx-r">二医院二医院二医院二医院二医院二医院二医院二医院</p>
+						<p class="fz24 c-834c45 mzub-te mzub-f1 tx-r">禾乾医疗</p>
 					</li>
 					<li class="mzub mzub-ac bb plr30 ptb20 bg-fff6cf">
-						<p class="c66 mzub-f1 fz22 mr30">医院名称</p>
-						<p class="fz24 c-834c45 mzub-te mzub-f1 tx-r">二医院</p>
+						<p class="c66 mzub-f1 fz22 mr30">挂号病区</p>
+						<p class="fz24 c-834c45 mzub-te mzub-f1 tx-r">{{ schedule.section.area }}</p>
 					</li>
 					<li class="mzub mzub-ac bb plr30 ptb20 bg-fff6cf">
-						<p class="c66 mzub-f1 fz22 mr30">医院名称</p>
-						<p class="fz24 c-834c45 mzub-te mzub-f1 tx-r">二医院</p>
+						<p class="c66 mzub-f1 fz22 mr30">挂号科室</p>
+						<p class="fz24 c-834c45 mzub-te mzub-f1 tx-r">{{ schedule.section.name }}</p>
 					</li>
 					<li class="mzub mzub-ac bb plr30 ptb20 bg-fff6cf">
-						<p class="c66 mzub-f1 fz22 mr30">医院名称</p>
-						<p class="fz24 c-834c45 mzub-te mzub-f1 tx-r">二医院</p>
+						<p class="c66 mzub-f1 fz22 mr30">就诊医生</p>
+						<p class="fz24 c-834c45 mzub-te mzub-f1 tx-r">{{ schedule.doctor.name }}</p>
+					</li>
+                    <li class="mzub mzub-ac bb plr30 ptb20 bg-fff6cf">
+						<p class="c66 mzub-f1 fz22 mr30">挂号人</p>
+						<p class="fz24 c-834c45 mzub-te mzub-f1 tx-r">{{ user.nickname }}</p>
 					</li>
 
 				</ul>
 			</div>
 			<div class="mzub mzub-ac plr30 ptb20 bg-fff6cf mt20">
 				<p class="c66 mzub-f1 fz22 mr30">挂号金额</p>
-				<p class="fz24 c-da9548 mzub-te mzub-f1 tx-r">30.00元</p>
+				<p class="fz24 c-da9548 mzub-te mzub-f1 tx-r">{{ schedule.doctor.price }}元</p>
 			</div>
-			<div class="sureBtn mzub mzub-pac ptb20 bg-f4e5bc cff mt20">挂号金额
+			<div class="sureBtn mzub mzub-pac ptb20 bg-f4e5bc cff mt20">付款挂号
 			</div>
 			
 			
-			<p class="tx-c c66 fz24">暂无数据~~~</p>
+{#			<p class="tx-c c66 fz24">暂无数据~~~</p>#}
 		</div>
 	</body>
 
