数据库调整到服务器

--- a/templates/section_list.html
+++ b/templates/section_list.html
@@ -18,10 +18,10 @@
 <body>
 <div class="warp plr30 pt30 bg-fff6cf">
     <!--搜索-->
-    <a href="科室列表搜索页.html" class="list-search plr20 mzub mzub-ac mb30 bg-e4d2ac">
-        <i class="iconfont icon-sousuo fz24 c33 mr10"></i>
-        <span class="c-606266 fz14">请输入科室或医生姓名查询</span>
-    </a>
+{#    <a href="科室列表搜索页.html" class="list-search plr20 mzub mzub-ac mb30 bg-e4d2ac">#}
+{#        <i class="iconfont icon-sousuo fz24 c33 mr10"></i>#}
+{#        <span class="c-606266 fz14">请输入科室或医生姓名查询</span>#}
+{#    </a>#}
     <ul class="department-list">
         {% for section in sections %}
 {#            <a href="{{ auth_url(reverse('doctor_list', kwargs={'section': section.id})) }}">#}
